--- a/source/form.html
+++ b/source/form.html
@@ -15,18 +15,18 @@
         </button>
         <div class="main-nav__wrapper"></div>
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav--current-item">
-              <a class="main-nav__item-link">
+            <li class="main-nav__item">
+              <a class="main-nav__item-link" href="index.html">
                   Главная
               </a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__item-link" href="#">
+              <a class="main-nav__item-link" href="catalog.html">
                   Фото и видео
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="#">
+            <li class="main-nav__item main-nav--current-item">
+              <a class="main-nav__item-link">
                   Форма отзыва
               </a>
             </li>
@@ -39,79 +39,79 @@
       </nav>
     </header>
     <main class="main">
-      <section class="main__introduce--inner introduce">
-        <h1 class="introduce__title visually-hidden">
+      <section class="main__introduce main__introduce--inner introduce">
+        <span class="introduce__title visually-hidden">
           sedona
-        </h1>
+        </span>
         <div class="introduce__img-wrapper--main">
           <svg xmlns="http://www.w3.org/2000/svg" width="229" height="39" fill="none"><path d="M27.3 26.6v.7c-.3 2-1 4-2 5.8-1 1.8-2.5 3.2-4.2 4.2L19 38l-2.1.5-1.8.3-1.7.1h-.6A19.7 19.7 0 0 1 0 33.6L4.7 26l.2.2c1 1.1 2.2 2.2 3.5 3.2 1.3 1 2.9 1.5 4.6 1.6h.1l.2.1h.1l.2.1h.5l.5-.1a4.8 4.8 0 0 0 3-2l.1-.3.1-.3.2-.7v-.7c0-1-.4-2-1.3-2.6-1-.7-2-1.3-3-1.7l-1.2-.4-1-.2h-.2v-.1c-2-.5-3.8-1.2-5.4-2.3A8.2 8.2 0 0 1 2 14.2 11 11 0 0 1 2 13V11c0-.3 0-.6.2-1 0-.7.3-1.5.6-2.3.2-.7.6-1.4 1-2a11 11 0 0 1 4.8-4.5 16 16 0 0 1 6-1.2l1.6.1 1.6.2a20.5 20.5 0 0 1 8 3l-3.2 7.3A28 28 0 0 0 19 8.5a8 8 0 0 0-3.7-.9h-.5c-1 .1-1.7.5-2.5 1.2s-1.2 1.5-1.2 2.3v.3l.2.4.4.7.7.7 1.8 1 2.6.8 2.1.5 1.8.5a9 9 0 0 1 5 3.9c1 1.8 1.6 3.7 1.6 5.7v1Zm30 3.2V38H34.7V.9h22.8V9H44.6v6.5h12v8h-12v6.3h12.8Zm38.5-1.5a15.8 15.8 0 0 1-11.1 8.8c-2.2.5-4.3.8-6.5.9H64.5V1h14.3c2 .1 4.1.4 6.2.9a15.3 15.3 0 0 1 10.7 8.6c1.2 2.5 1.9 5 2 7.6v2.3c0 2.8-.7 5.4-2 8Zm-8.2-9.2v-.5c-.2-1.4-.5-2.9-1.1-4.2a8.4 8.4 0 0 0-2.6-3.3 6.9 6.9 0 0 0-2.7-1.4c-1-.3-2-.4-3-.4h-3.8v20.5h.4l.4.1h.4l.3.1h1.2l1.2-.1 3-.5c1-.3 1.8-.8 2.6-1.3a7.9 7.9 0 0 0 2.8-3.6c.6-1.6.9-3.2.9-4.8V19Zm54.9 2c0 .4 0 .8-.2 1.2a18.7 18.7 0 0 1-8.9 13.6 21 21 0 0 1-10.8 3H121a21.3 21.3 0 0 1-7.7-2.2 19 19 0 0 1-7.6-7.3 19.4 19.4 0 0 1-2.9-10l.1-1.5.2-1.5a25.1 25.1 0 0 1 2.2-6c1.8-3.4 4.2-5.9 7.4-7.6A20.3 20.3 0 0 1 124.1.2l1.4.1a21.1 21.1 0 0 1 8.3 3c2.8 1.8 5 4.2 6.4 7.2 1.5 3 2.3 6 2.3 9.3V21Zm-10.1-2.2v-.7c-.3-1.6-.8-3.2-1.6-4.8a9 9 0 0 0-3.3-3.6l-1.2-.5-1.1-.4-1.2-.2-1.2-.1c-2 0-3.8.6-5.4 1.9a9.9 9.9 0 0 0-3.5 5l-.1.2v.2l-.4 1-.2 1.2-.1.8v1.8c0 2 .7 4 1.9 5.8a8 8 0 0 0 5.4 4h.8l.7.2h.7a9.9 9.9 0 0 0 9.6-9.3l.1-.8V19Zm43.8 19.2-14-19.2c-.5-.5-.8-1-1.2-1.7a25 25 0 0 1-1.6-3.5l-.6-1.3a42.8 42.8 0 0 1 .6 7.4V38h-9.8V.9h9.8l14 19.1 1 1.7 1 1.9.6 1.5.7 1.4-.1-1.2-.2-1.2-.1-2.4V1h9.6V38h-9.7Zm42.7 0-1.9-6.7h-14.3l-2 6.7h-10L203.6 1H216L229 38h-10.1ZM211 11.9l-.5-1.8-.5-2-.1-.6-.1-.6-.2.6-.1.6-.1.2v.2l-.4 1.8-.5 1.6-3.8 12.3H215L211.1 12Z" fill="#fff"/></svg>
         </div>
       </section>
       <section class="comment-form">
-        <h2 class="comment-form__title">
+        <h1 class="comment-form__title">
           Оставьте свой отзыв
-        </h2>
+        </h1>
         <p class="comment-form__subtitle">
           Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
         </p>
         <form class="form" action="https://echo.htmlacademy.ru/" method="POST">
-          <fieldset class="introduce-form">
-            <legend class="introduce-form__title">
+          <fieldset class="form__group">
+            <legend class="form__title">
               Представьтесь:
             </legend>
-            <ul class="introduce-form__list">
-              <li class="introduce-form__item">
-                <label calss="introduce-form__block">
-                  <span class="introduce-form__ilabel">
+            <ul class="form__list">
+              <li class="form__item">
+                <label calss="form__label">
+                  <span class="form__input-name">
                     Имя*:
                   </span>
-                  <input class="introduce-form__input" type="text" placeholder="Петр" required>
+                  <input class="form__input" type="text" placeholder="Петр" required>
                 </label>
               </li>
-              <li class="introduce-form__item">
-                <label calss="introduce-form__block">
-                  <span class="introduce-form__label">
+              <li class="form__item">
+                <label calss="form__label">
+                  <span class="form__input-name">
                     Фамилия*:
                   </span>
-                  <input class="introduce-form__input" type="text" placeholder="Иванов" required>
+                  <input class="form__input" type="text" placeholder="Иванов" required>
                 </label>
               </li>
-              <li class="introduce-form__item">
-                <label calss="introduce-form__block">
-                  <span class="introduce-form__label">
+              <li class="form__item">
+                <label calss="form__label">
+                  <span class="form__input-name">
                     Отчество:
                   </span>
-                  <input class="introduce-form__input" type="text" placeholder="Александрович">
+                  <input class="form__input" type="text" placeholder="Александрович">
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="contact-form">
-            <legend class="contact-form__title">
+          <fieldset class="form__group">
+            <legend class="form__title">
               Контактная информация:
             </legend>
-            <ul class="contact-form__list">
-              <li class="contact-form__item">
-                <label calss="contact-form__block">
-                  <span class="contact-form__label">
+            <ul class="form__list">
+              <li class="form__item">
+                <label calss="form__label">
+                  <span class="form__input-name form__input-name--phone">
                     Контактный телефон*:
                   </span>
-                  <input class="contact-form__input" type="number" placeholder="Введите телефон">
-                  <div class="contact-form__icon-wrapper">
-                    <div class="contact-form__phone-icon">
+                  <input class="form__input" type="number" placeholder="Введите телефон">
+                  <div class="form__icon-wrapper">
+                    <div class="form__phone-icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"><path d="M3.6 7.8c1.4 2.8 3.8 5.1 6.6 6.6l2.2-2.2c.3-.3.7-.4 1-.2 1.1.4 2.3.6 3.6.6.6 0 1 .4 1 1V17c0 .6-.4 1-1 1A17 17 0 0 1 0 1c0-.6.4-1 1-1h3.5c.6 0 1 .4 1 1 0 1.2.2 2.4.6 3.6.1.3 0 .7-.2 1L3.6 7.8Z" fill="#010101"/></svg>
                     </div>
                   </div>
                 </label>
               </li>
-              <li class="contact-form__item">
-                <label calss="contact-form__block">
-                  <span class="contact-form__label">
+              <li class="form__item">
+                <label calss="form__label">
+                  <span class="form__input-name">
                     Электронная почта*:
                   </span>
-                  <input class="contact-email__input" type="email" placeholder="Введите e-mail" required>
-                  <div class="contact-form__icon-wrapper">
-                    <div class="contact-form__email-icon">
+                  <input class="form__input" type="email" placeholder="Введите e-mail" required>
+                  <div class="form__icon-wrapper">
+                    <div class="form__email-icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" fill="none"><path d="m8 8-1-.3L0 4v7c0 .5.5 1 1 1h14c.5 0 1-.5 1-1V4L9 7.7 8 8Zm7-8H1a1 1 0 0 0-1 1v.8L8 6l8-4.2V1c0-.5-.5-1-1-1Z" fill="#000"/></svg>
                     </div>
                   </div>
@@ -119,89 +119,89 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="impression-form">
-            <legend class="impression-form__title">
+          <fieldset class="form__group">
+            <legend class="form__title">
               Ваше общее впечатление:
             </legend>
-            <ul class="impression-form__list">
-              <li class="impression-form__item">
-                <label class="impression-form__block">
-                  <input class="impression-form__input visually-hidden" type="radio" checked>
-                  <span class="impression-form__mark"></span>
-                  <span class="impression-form__label">
+            <ul class="form__list">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__radio visually-hidden" type="radio" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__radio-name">
                     Скорее положительное
                   </span>
                 </label>
               </li>
-              <li class="impression-form-form__item">
-                <label class="impression-form-form__block">
-                  <input class="impression-form__input visually-hidden" type="radio" checked>
-                  <span class="impression-form__mark"></span>
-                  <span class="impression-form__label">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__radio visually-hidden" type="radio" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__radio-name">
                     Скорее отрицательное
                   </span>
                 </label>
               </li>
-              <li class="impression-form__item">
-                <label class="impression-form__block">
-                  <input class="impression-form__input visually-hidden" type="radio" checked>
-                  <span class="impression-form__mark"></span>
-                  <span class="impression-form__label">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__radio visually-hidden" type="radio" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__radio-name">
                     Затрудняюсь ответить
                   </span>
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="sights-visited-form">
-            <legend class="sights-visited-form__title">
+          <fieldset class="form__group">
+            <legend class="form__title">
               Посещенные достопримечательности:
             </legend>
-            <ul class="sights-visited-form__list">
-              <li class="sights-visited-form__item">
-                <label class="sights-visited-form__block">
-                  <input class="sights-visited-form__input visually-hidden" type="checkbox" checked>
-                  <span class="sights-visited-form__mark"></span>
-                  <span class="sights-visited-form__label">
+            <ul class="form__list">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__checkbox visually-hidden" type="checkbox" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__checkbox-name">
                     Мост Дьявола
                   </span>
                 </label>
               </li>
-              <li class="sights-visited-form__item">
-                <label class="sights-visited-form__block">
-                  <input class="sights-visited-form__input visually-hidden" type="checkbox" checked>
-                  <span class="sights-visited-form__mark"></span>
-                  <span class="sights-visited-form__label">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__checkbox visually-hidden" type="checkbox" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__checkbox-name">
                     Гора-Колокол
                   </span>
                 </label>
               </li>
-              <li class="sights-visited-form__item">
-                <label class="sights-visited-form__block">
-                  <input class="sights-visited-form__input visually-hidden" type="checkbox" checked>
-                  <span class="sights-visited-form__mark"></span>
-                  <span class="sights-visited-form__label">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__checkbox visually-hidden" type="checkbox" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__checkbox-name">
                     Слайд-парк
                   </span>
                 </label>
               </li>
-              <li class="sights-visited-form__item">
-                <label class="sights-visited-form__block">
-                  <input class="sights-visited-form__input visually-hidden" type="checkbox">
-                  <span class="sights-visited-form__mark"></span>
-                  <span class="sights-visited-form__label">
+              <li class="form__item">
+                <label class="form__label">
+                  <input class="form__checkbox visually-hidden" type="checkbox" checked>
+                  <span class="form__mark"></span>
+                  <span class="form__checkbox-name">
                     Красные скалы
                   </span>
                 </label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="emotion-description-form">
-            <legend class="emotion-description-form__title">
+          <fieldset class="form__group">
+            <legend class="form__title">
               Опишите свои эмоции:
             </legend>
-            <div class="emotion-description-form__textarea-wrapper">
-              <textarea class="emotion-description-form__textarea" name="text" id="" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
+            <div class="form__textarea-wrapper">
+              <textarea class="form__textarea" name="text" id="" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
             </div>
           </fieldset>
         </form>
