--- a/source/index.html
+++ b/source/index.html
@@ -167,20 +167,20 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__hashtag">#visitsedona</div>
-        <div class="page-footer__social">
-          <ul class="page-footer__social-list">
-            <li class="page-footer__social-item">
-              <a href="https://twitter.com/htmlacademy_ru" class="page-footer__social-twitter">
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="https://twitter.com/htmlacademy_ru" class="social__item social__item--link-twitter">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="15" fill="none"><path d="M11.3.2c1.7-.5 3.1.2 3.7 1l2.1-.6c0 .8-.5 1.5-.9 1.7.7.2 1.3-.5 1.3-.5a3 3 0 0 1-1.6 2c-.2 6.6-3.3 11-10.4 10.8H5c-.4 0-4.3-.4-5-1.8 2.3.2 4-.4 4.8-1.1-1-.3-2.8-.5-3.1-3 .4.2.6.3 1.3.2C1.8 8 .4 7.4.5 5.2c.3.3 1.1.5 1.4.5-.7-.2-2-3.3-.9-4.8 1.9 1.8 3.8 3.5 7.4 3.7C8.5 2.3 9.5.8 11.3.2Z" fill="#000"/></svg>
               </a>
             </li>
-            <li class="page-footer__social-item">
-              <a href="https://www.facebook.com/htmlacademy" class="page-footer__social-facebook">
+            <li class="social__item">
+              <a href="https://www.facebook.com/htmlacademy" class="social__item social__item--link-facebook">
                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="19" fill="none"><path d="M6.3 3.4h2.4V0H5.8C2.7.2 1.5 2.4 1.9 6.1H0v3.5h2v9.3h3.8V9.6h2.9V6.1H5.8c0-1 0-2.4.5-2.7Z" fill="#000"/></svg>
               </a>
             </li>
             <li class="page-footer__social-item">
-              <a href="https://www.youtube.com/c/HTMLAcademyRUS" class="page-footer__social-youtube">
+              <a href="https://www.youtube.com/c/HTMLAcademyRUS" class="social__item social__item--link-youtube">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none"><path d="M17.1 0H2.8A2.9 2.9 0 0 0 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.3c1.6 0 2.8-1.3 2.8-2.8V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7 7 10.4Z" fill="#000"/></svg>
               </a>
             </li>
