Изменения после проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,7 @@
           <div class="main-nav__wrapper main-nav__wrapper--mobile">
             <ul class="main-nav__list">
               <li class="main-nav__item main-nav__item--current-item">
-                <a class="main-nav__item-link">
+                <a class="main-nav__item-link" href="index.html">
                     Главная
                 </a>
               </li>
@@ -148,7 +148,7 @@
         </section>
       </main>
       <footer class="page-footer">
-        <div class="page-footer__wrapper">
+        <div class="page-footer__wrapper container">
           <div class="page-footer__hashtag">#visitsedona</div>
           <div class="page-footer__social">
             <ul class="page-footer__social-list">
