--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,9 +60,9 @@
           </div>
           <div class="photo-presentation__posts posts">
             <ul class="posts__list">
-              <li class="posts__item post container">
+              <li class="posts__item post">
                 <figure class="post__figure">
-                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-photo-1.jpg" alt="Дорога среди растительности Седоны и гор прячущих солнце на закате" width="280" height="280">
+                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-1.jpg" alt="Дорога среди растительности Седоны и гор прячущих солнце на закате" width="1200" height="400">
                   <figcaption class="post__title">
                     Неродные просторы
                   </figcaption>
@@ -79,30 +79,30 @@
                   </p>
                 </div>
               </li>
-              <li class="posts__item post container">
+              <li class="posts__item post">
                 <figure class="post__figure">
-                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-photo-2.jpg" alt="Необычайный кактус с распукающимися цветками на его верхушке" width="280" height="280">
+                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-2.jpg" alt="Необычайный кактус с распукающимися цветками на его верхушке" width="400" height="280">
                   <figcaption class="post__title">
-                    Неродные просторы
+                    Местная растительность
                   </figcaption>
                 </figure>
                 <address class="post__photo-author">
-                  Автор фото: Борис
+                  Автор фото: Сергей
                 </address>
                 <div class="post__likes">
                   <button class="post__like-icon" type="button" aria-label="Лайкнуть">
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="21" fill="none"><path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/></svg>
                   </button>
                   <p class="post__like-quantity">
-                    1350
+                    143
                   </p>
                 </div>
               </li>
-              <li class="posts__item post container">
+              <li class="posts__item post">
                 <figure class="post__figure">
-                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-photo-3.jpg" alt="Дорога на склоне горы Седоны" width="280" height="280">
+                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-3.jpg" alt="Дорога на склоне горы Седоны" width="400" height="280">
                   <figcaption class="post__title">
-                    Неродные просторы
+                    Дорога на север
                   </figcaption>
                 </figure>
                 <address class="post__photo-author">
@@ -113,7 +113,26 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="21" fill="none"><path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/></svg>
                   </button>
                   <div class="post__like-quantity">
-                    1350
+                    96
+                  </div>
+                </div>
+              </li>
+              <li class="posts__item post">
+                <figure class="post__figure">
+                  <img class="post__img-wrapper" src="img/mobile/catalog/presentation/presentation-4.jpg" alt="Дорога на склоне горы Седоны" width="400" height="280">
+                  <figcaption class="post__title">
+                    Мост дьявола
+                  </figcaption>
+                </figure>
+                <address class="post__photo-author">
+                  Автор фото: Антон
+                </address>
+                <div class="post__likes">
+                  <button class="post__like-icon" type="button" aria-label="Лайкнуть">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="21" fill="none"><path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/></svg>
+                  </button>
+                  <div class="post__like-quantity">
+                    254
                   </div>
                 </div>
               </li>
@@ -129,18 +148,18 @@
           </p>
           <div class="video-presentation__video video ">
             <!-- Временное промо -->
-            <img class="video__promo-video" src="img/mobile/catalog/presentation-video/presentation-promo-video.jpg" alt="Седона">
+            <img class="video__promo-video" src="img/mobile/catalog/presentation-video/presentation-video-promo.jpg" alt="Седона" width="800" height="500">
             <div class="video-presentation__media-player media-player">
               <div class="media-player__progress progress">
                 <button class="progress__button" aria-label="Бегунок прогресса видео"></button>
               </div>
-              <button class="media-player__button-replay" type="button" aria-label="Кнопка проигрыватель">
+              <button class="media-player__button media-player__button--replay" type="button" aria-label="Кнопка проигрыватель">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="none"><path d="M8 4V0L3 5l5 5V6a6 6 0 0 1 6 6 6 6 0 0 1-6 6 6 6 0 0 1-6-6H0a8 8 0 0 0 8 8 8 8 0 0 0 8-8 8 8 0 0 0-8-8Z" fill="#5C6870"/></svg>
               </button>
-              <button class="media-player__button-subtitles" type="button" aria-label="Кнопка cубтитров">
+              <button class="media-player__button media-player__button--subtitles" type="button" aria-label="Кнопка cубтитров">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="20" fill="none"><path d="M29 0H3a3 3 0 0 0-3 3v14a3 3 0 0 0 3 3h26a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3ZM14.4 15.9l-1.7.1c-.7 0-1.4-.1-2-.3-.6-.2-1.2-.6-1.6-1-.4-.4-.8-1.1-1.1-1.9-.3-.8-.4-1.7-.4-2.8 0-1.1.2-2.1.5-2.9.3-.8.7-1.4 1.2-1.9s1.1-.8 1.7-1a10 10 0 0 1 3.5-.1l1.1.3-.4 1.9-.9-.3H13c-.9 0-1.6.3-2.2 1-.6.7-.8 1.7-.8 3l.2 1.6c.1.5.3.9.6 1.3l1 .8c.4.2.9.3 1.4.3l1.3-.1.9-.4.5 1.8-1.5.6Zm8.7 0-1.7.1c-.7 0-1.4-.1-2-.3-.6-.2-1.2-.6-1.6-1a4 4 0 0 1-1.1-1.9c-.3-.8-.4-1.7-.4-2.8 0-1.1.2-2.1.5-2.9.3-.8.7-1.4 1.2-1.9s1.1-.8 1.7-1a10 10 0 0 1 3.5-.1l1.1.3-.4 1.9L23 6h-1.3c-.9 0-1.6.3-2.2 1-.6.7-.8 1.7-.8 3l.2 1.6c.1.5.3.9.6 1.3l1 .8c.4.2.9.3 1.4.3l1.3-.1.9-.4.5 1.8-1.5.6Z" fill="#5C6870"/></svg>
               </button>
-              <button class="media-player__button-subtitles" type="button" aria-label="Кнопка полноэранного режима">
+              <button class="media-player__button media-player__button--display" type="button" aria-label="Кнопка полноэранного режима">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path d="M0 0v6h3V3h3V0H0ZM3 14H0v6h6v-3H3v-3ZM17 0h-3v3h3v3h3V0h-3ZM17 17h-3v3h6v-6h-3v3Z" fill="#5C6870"/></svg>
               </button>
             </div>
