--- a/source/form.html
+++ b/source/form.html
@@ -57,7 +57,7 @@
             Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
           </p>
           <form class="comment-form__form form" action="https://echo.htmlacademy.ru/" method="POST">
-            <fieldset class="form__group">
+            <fieldset class="form__group form__group--name">
               <legend class="form__title">
                 Представьтесь:
               </legend>
@@ -88,7 +88,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form__group">
+            <fieldset class="form__group form__group--contact">
               <legend class="form__title">
                 Контактная информация:
               </legend>
@@ -121,7 +121,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form__group">
+            <fieldset class="form__group form__group--impression">
               <legend class="form__title">
                 Ваше общее впечатление:
               </legend>
@@ -155,7 +155,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form__group">
+            <fieldset class="form__group form__group--attraction">
               <legend class="form__title">
                 Посещенные достопримечательности:
               </legend>
@@ -198,7 +198,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form__group">
+            <fieldset class="form__group form__group--emotions">
               <legend class="form__title">
                 Опишите свои эмоции:
               </legend>
